# WorkShop-2

./: .gitignore  README.md  pyproject.toml
Dags/: grammy.py  merge.py  processETL.py  spotify.py
EDA/: 01_Grammy_EDA.ipynb  02_Spotify_EDA.ipynb  grammy_EDA.ipynb
dags/: processETL.py
pre-ETL/: grammyETL.ipynb  merge.ipynb  spotifyETL.ipynb
