[tool.poetry]
name = "workshop2"
version = "0.1.0"
description = ""
authors = ["SantiagoLinux <santiago.gomez.castro.04@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.2.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
